# deepfake-detector

./: .gitignore  Dockerfile  README.md  TRAINING.md  demo.py  pyproject.toml
.github/workflows/: ci.yml
api/: main.py  schemas.py
api/routes/: __init__.py  detect.py  live_test.py  stream.py
api/static/: app.js  index.html
configs/: efficientnet_b4_mvp.yaml
deepfake_detector/: __init__.py  core.py  types.py
deepfake_detector/cnn/: __init__.py  detector.py
deepfake_detector/liveness/: __init__.py  analyser.py
deepfake_detector/models/: __init__.py  _download.py  registry.py
deepfake_detector/temporal/: __init__.py  analyser.py
deepfake_detector/utils/: __init__.py  face.py
models/: manifest.json
scripts/: download_datasets.py  download_models.py  export_onnx.py  finetune_pretrained.py  generate_fakes.py  preprocess_dataset.py  record_real_faces.py  train.py
scripts/run/: 1_fix_venv.sh  2_train.sh  3_export_onnx.sh  4_webserver.sh  5_watch_training.sh  6_stop_all.sh  README.md
tests/: conftest.py  test_liveness.py  test_models.py  test_models_download.py  test_temporal.py  test_types.py
tools/: dlc_bridge.py  run_dlc_bridge.sh
